e2e/agic/backendtls/complex/input/ingress-backend-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /https-backend/
            backend:
              service:
                name: contoso-service
                port:
                  number: 443
            pathType: Exact
    - host: fabrikam.com
      http:
        paths:
          - path: /https-backend/
            backend:
              service:
                name: fabrikam-service
                port:
                  number: 443
            pathType: Exact
